# company_private

./: .env-copy  .gitignore  Dockerfile  pyproject.toml  requirements.txt  sayorama-680ab-firebase-adminsdk-u43b2-4d52d74af6.json  start_uvicorn
.github/workflows/: company.yml  docker_company.yml  master.yml
_log_config/: log_config.py
app/: config.py  main.py  models.py  oauth2.py
app/AI/: sayory.py
app/connect/: connection_manager.py
app/database/: database.py
app/functions/: fcm_sent_message.py  func_notifications.py  func_private.py
app/models/: models.py
app/routers/: func_private.py  private_messages.py
app/schemas/: schemas.py
app/security/: auth.py  crypto_messages.py  oauth2.py
app/settings/: config.py  utils.py
test/: test_mark_massage.py
